static/lost_pets.css
/*--------------------------------*/
/*Maps and general layout*/
/*--------------------------------*/

#required {
    color: red;
}

.user_entered_address {
  display: none;
}

.submitted_form_class {
  display: none;
}

.moreInfo_class {
  display: none;
}

.navbar-brand {
  font-size: 40px;
  margin: 0px;
}

.bg-light {
    background-color: #77c9d4;
}

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
    background-color: #77c9d4; 
    color: #015249;
}

.navbar-light .navbar-brand {
  color: #015249;
}

#container {
  width:100%;
}

#pet-map {
  padding-left: 10px;
  display: inline-block; 
  height: 900px;
  width: 100%;
  border-style: solid;
  border-width: 7px;
  border-color: #DCB239;
}

#seen_form {
  margin: 5px 10px;
  display: inline-block; 
  height: 800px;
  padding-left: 0px;
}

.seen_form_div {
  background-color: #FEDCD2;
  border: solid;
  border-width: 5px 0px 5px 5px;
  border-color: #DF744A;
  padding: 0px 50px 0px 0px;
}

.filter_form_div {
  background-color: #FEDCD2;
  border: solid;
  border-width: 5px 5px 5px 0px;
  border-color: #DF744A;
  padding: 0px 20px;

}

#map_filter_button{
  margin: 0px 0px 0px 10px;
}


.window-content {
  color: #04162b;
  width: 150px;
}

#filter_form {
  margin: 5px 0px 5px 20px;
}

body {
    background-color: #8FD8D2;
}

.collapse {
  flex-grow: 0;
}

.search_address_btn {
    background-color: #DCB239;
    border: none;
    color: white;
    padding: 5px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

/*--------------------------------*/
/*Filter Map Button*/
/*--------------------------------*/

.map_filter_button {
  display: inline-block;
  border-radius: 4px;
  background-color: #DF744A;
  border: none;
  color: #FFFFFF;
  text-align: center;
  font-size: 20px;
  padding: 20px;
  height: 100%;
  transition: all 0.5s;
  cursor: pointer;
  margin: 0px 5px 0px 0px;
}

.map_filter_button span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.map_filter_button span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.map_filter_button:hover span {
  padding-right: 25px;
}

.map_filter_button:hover span:after {
  opacity: 1;
  right: 0;
}

.map_filter_button_div {

}



/*--------------------------------*/
/*animal_form_drawer Button*/
/*--------------------------------*/

.animal_form_drawer {
  display: inline-block;
  border-radius: 4px;
  background-color: #DF744A;
  border: none;
  color: #FFFFFF;
  text-align: center;
  font-size: 20px;
  padding: 20px;
  height: 100%;
  transition: all 0.5s;
  cursor: pointer;
  margin: 0px 0px 0px 5px;
}

.animal_form_drawer span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.animal_form_drawer span:after {
  content: '\00AB';
  position: absolute;
  opacity: 0;
  top: 0;
  left: -20px;
  transition: 0.5s;
}

.animal_form_drawer:hover span {
  padding-left: 25px;
}

.animal_form_drawer:hover span:after {
  opacity: 1;
  left: 0;
}

.animal_form_drawer {

}


/*--------------------------------*/
/*More Info*/
/*--------------------------------*/

#animal_photo {
  display: inline-block;
  margin: 25px 50px;
}

#animal_info {
  display: inline-block;
  margin: 25px 50px;
}

#found_button_div {
  display: inline-block;
  margin: 25px 50px;
}

#moreInfo {
  margin: 5px 20px;
}


/*--------------------------------*/
/*Report Lost Pet page*/
/*--------------------------------*/

div.pet-list {    
    margin-top: 15px;
    margin-bottom: 15px;
}

div.pet-detail {
    margin-top: 20px;
    font-weight: lighter;
}

div.search_btn {border-style: solid;}

#search_pet_posters {
  margin: 0px 0px 0px 15px;
}

.form-control {
  margin: 0px 0px 0px 20px;
}

#pet_photo {
  padding: 30px; 
}

#missing_pet_icons {
    background-color: #FEDCD2;
    border-style: solid;
    border-width: 7px;
    border-color: #DF744A;
}

.report_btn {
    background-color: #DCB239;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}


.search_btn {
    background-color: #DCB239;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

.change_password {
    background-color: #DCB239;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

/*--------------------------------*/
/* Profile */
/*--------------------------------*/


/*--------------------------------*/
/* Missing Pet poster form page */
/*--------------------------------*/

.submit_lost_poster_div {
    background-color: #FEDCD2;
    border-style: solid;
    border-width: 7px;
    border-color: #DF744A;
    padding: 30px; 
    margin: 0px 20px 0px 10px;
}

.tips_div {
    background-color: #FEDCD2;
    border-style: solid;
    border-width: 7px;
    border-color: #DF744A;
    padding: 30px; 
    margin: 0px 10px 0px 20px;
}



/*--------------------------------*/
/* Modal */
/*--------------------------------*/

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
}

/* The Close Button */
.close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

#lost_pet_modal_html {
  display: inline-block;
  margin: 100px 50px;
}



#lost_pet_mapbox {
  padding-left: 10px;
  display: inline-block; 
  height: 400px;
  width: 400px;
}

